language/tests/error/TypeError06.hashem
bebin main() {
  defineFunction(3);
}  
